Implement DELETE session API
